syntax = "proto2";

package apollo.planning;

// Truck parameters shared among several modules.
// By default, all are measured with the SI units (meters, meters per second,
// etc.).

message TractorParam {

  optional double front_overhang = 1 [default = nan];
  optional double rear_overhang = 2 [default = nan];

  optional double front_edge_to_center = 3 [default = nan];
  optional double back_edge_to_center = 4 [default = nan];
  optional double left_edge_to_center = 5 [default = nan];
  optional double right_edge_to_center = 6 [default = nan];

  optional double length = 7 [default = nan];
  optional double width = 8 [default = nan];
  optional double height = 9 [default = nan];

  optional double min_turn_radius = 10 [default = nan];
  optional double max_acceleration = 11 [default = nan];
  optional double max_deceleration = 12 [default = nan];

  // The following items are used to compute trajectory constraints in
  // planning/control/canbus,
  // vehicle max steer angle
  optional double max_steer_angle = 13 [default = nan];
  // vehicle max steer rate; how fast can the steering wheel turn.
  optional double max_steer_angle_rate = 14 [default = nan];
  // vehicle min steer rate;
  optional double min_steer_angle_rate = 15 [default = nan];
  // ratio between the turn of steering wheel and the turn of wheels
  optional double steer_ratio = 16 [default = nan];
  // the distance between the front and back wheels
  optional double wheel_base = 17 [default = nan];
}

message TrailerParam {
  optional double head_base_to_hinge = 1 [default = nan];
  optional double front_overhang = 2 [default = nan];
  optional double rear_overhang = 3 [default = nan];
  optional double length = 4 [default = nan];
  optional double width = 5 [default = nan];
  optional double height = 6 [default = nan];
  optional double wheel_base = 7 [default = nan];
}

message TruckConfig {
  optional TractorParam tractor_param = 2;
  optional TrailerParam trailer_param = 3;
}
